# Oglre

./: .clang-format  .clangd  .gitignore  README.md  imgui.ini  meson.build
resources/shaders/: Basic.glsl  Basic.shader
src/: Main.cpp  example.cpp  main.cpp
src/Application/: Application.cpp  Application.h  AuxiliaryFunctions.cpp  AuxiliaryFunctions.h
src/Camera/: Camera.cpp  Camera.h
src/Model/: Mesh.cpp  Mesh.h
src/Renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/Shader/: Shader.cpp  Shader.h
subprojects/: glm.wrap  imgui.wrap
